CNCS Dev 12/src/objects/CFDA_number__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFDA_Name__c</fullName>
        <label>CFDA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <label>CFDA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CFDA number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CFDA number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFDA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>